Initial Robillo Commit

--- a/stages/index-final.html
+++ b/stages/index-final.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="icon.png" />
     
-    <title>TITLE</title>
+    <title>Robin Kamboj Resume</title>
     
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -34,7 +34,7 @@
      <div class="container">
        <div class="row centered">
          <div class="col-lg-12 animated fadeInUp">
-           <h1>Your Name</h1>
+           <h1>Robin Kamboj</h1>
            <h3>What you do | 
             <a href="mailto:You@Email.com" target="_blank">You@Email.com</a>
            </h3>
